Avoid redundant gaps after textarea (JPS-2750 Changes on User page)
Former-commit-id: fe4572c29780727cc276cf7c02d473eef7242298

--- a/components/form-ng/form-ng.scss
+++ b/components/form-ng/form-ng.scss
@@ -2,6 +2,7 @@
 
 .ring-form__update-text {
   font-size: 0;
+  line-height: 0;
 
   .ring-form__update-text-field {
     width: $ring-unit*30 !important;
